RESOLVED FIXED227796
[WebCrypto] deriveBits() fails if length is not a multiple of 8 for ECDH algorithm
https://bugs.webkit.org/show_bug.cgi?id=227796
Summary [WebCrypto] deriveBits() fails if length is not a multiple of 8 for ECDH algo...
Chris Dumez
Reported 2021-07-08 08:56:27 PDT
deriveBits() fails if length is not a multiple of 8 for ECDH algorithm. This doesn't match the specification or the behavior of Chrome.
Attachments
Patch (10.60 KB, patch)
2021-07-08 08:58 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-07-08 08:58:08 PDT
EWS
Comment 2 2021-07-08 09:29:23 PDT
Committed r279723 (239511@main): <https://commits.webkit.org/239511@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433134 [details].
Radar WebKit Bug Importer
Comment 3 2021-07-08 09:30:17 PDT
Note You need to log in before you can comment on or make changes to this bug.