[WebCrypto] deriveBits() fails if length is not a multiple of 8 for ECDH algorithm https://bugs.webkit.org/show_bug.cgi?id=227796

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/WebCryptoAPI/derive_bits_keys/ecdh_bits.https.any-expected.txt:
* web-platform-tests/WebCryptoAPI/derive_bits_keys/ecdh_bits.https.any.worker-expected.txt:

Source/WebCore:

deriveBits() fails if length is not a multiple of 8 for ECDH algorithm. This doesn't match
the specification or the behavior of Chrome.

No new tests, rebaselined existing tests.

* crypto/algorithms/CryptoAlgorithmECDH.cpp:
(WebCore::CryptoAlgorithmECDH::deriveBits):

LayoutTests:

Update existing layout test due to behavior change.

* crypto/subtle/ecdh-derive-bits-malformed-parametrs-expected.txt:
* crypto/subtle/ecdh-derive-bits-malformed-parametrs.html:


Canonical link: https://commits.webkit.org/239511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279723 268f45cc-cd09-0410-ab3c-d52691b4dbfc